added Mastodon link for verification

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Welcome to the 24th Dimension"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="me" href="https://mastodon.surazal.net/@zalasur" />
     <title>The 24th Dimension</title>
   </head>
   <body>
