laying out groundwork for blog list page

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="me" href="https://mastodon.surazal.net/@zalasur" />
+    <link rel="me" href="https://kith.kitchen/@zalasur" />
     <title>The 24th Dimension</title>
   </head>
   <body>
